# SearchPhone

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.json  docker-compose.yml  example.env  phone_list.txt  pyproject.toml  requirements.txt  search_phone.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: __init__.py  analyzer.py  cache.py  cli.py  config.py  menu.py  reporter.py  sources.py  sources_glaz_boga.py  utils.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_reporter.py  test_sources.py  test_sources_mocked.py  test_utils.py  test_validation.py
