[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "searchphone"
version = "2.0.0"
description = "OSINT tool for searching information by phone number"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Victor Bancayan", email = "info@hackunderway.com" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "phonenumbers>=8.13.0",
    "fpdf2>=2.8.2",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/HackUnderway/SearchPhone"
Repository = "https://github.com/HackUnderway/SearchPhone"

[tool.ruff]
target-version = "py38"
line-length = 150
exclude = ["__pycache__", "*.pyc", ".git", "tests/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]